# ato-cli

./: .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  Cargo.toml.bak  NACELLE_BUG_REPORT.md  README.md  README_JA.md  TODO.md  TRADEMARKS.md  build.rs  deny.toml  private.key  schema
.cargo/: config.toml
.github/workflows/: build-multi-os.yml  release.yml  secret-scan.yml  security-audit.yml  strict-sandbox.yml  upload-r2.yml  v3-parity.yml
agent/: agent.py  config.py  graph.py  requirements.txt
agent/db/: patterns.py  schema.sql
agent/nodes/: analyzer.py  critic.py  executor.py  generator.py  guard.py  patcher.py
agent/tests/: test_agent_loop.py
agent/tools/: file_tools.py  shell_tools.py
core/: CHANGELOG.md  Cargo.toml  build.rs
core/proto/tsnet/v1/: tsnet.proto
core/src/: config.rs  discovery.rs  engine.rs  error.rs  lib.rs  lockfile.rs  lockfile_runtime.rs  lockfile_support.rs  mag_uri.rs  manifest.rs  r3_config.rs  router.rs  runner.rs  schema_registry.rs  smoke.rs
core/src/capsule_v3/: fastcdc_writer.rs  reconstruct.rs
core/src/common/: paths.rs
core/src/diagnostics/: manifest.rs
core/src/execution_plan/: derive.rs  error.rs  guard.rs  model.rs
core/src/executors/: oci.rs  source.rs
core/src/packers/: bundle.rs  capsule.rs  lockfile.rs  mod.rs  oci.rs  pack_filter.rs  payload.rs  sbom.rs  source.rs  wasm.rs  web.rs
core/src/packers/runtime_fetcher/: fetcher.rs  mod.rs
core/src/policy/: mod.rs
core/src/resource/: mod.rs
core/src/resource/cas/: client.rs  mod.rs
core/src/resource/ingest/: http.rs
core/src/runtime/: mod.rs  native.rs  oci.rs  wasm.rs
core/src/schema/: converter.rs  mod.rs
core/src/signing/: manifest_verifier.rs  mod.rs  sign.rs  verify.rs
core/src/tsnet/: client.rs  ipc.rs  mod.rs  tsnet.v1.rs
core/src/types/: capsule_v1.rs  identity.rs  manifest.rs  manifest_v03.rs  manifest_validation.rs  mod.rs  orchestration.rs  runplan.rs
core/src/validation/: mod.rs
core/tests/: allocation_regression.rs  polymorphism_test.rs
lock-draft-engine/: CHANGELOG.md
scripts/: agent_demo_from_skill_self_heal.py  build_release_artifacts.sh  mirror_nacelle_release_to_r2.sh  mock_agent_self_heal.py  upload_release_to_r2.sh
scripts/demo/: SKILL.md
skills/ato-deploy-staging/: SKILL.md  VERIFY_PROMPT_FOR_OTHER_AGENT.md
skills/data-fetcher/: SKILL.md  VERIFY_PROMPT_FOR_OTHER_AGENT.md
skills/data-fetcher-fail/: SKILL.md  SKILL.md.bak  VERIFY_PROMPT_FOR_OTHER_AGENT.md
src/: agent_loop.rs  ato_error_jsonl.rs  auth.rs  binding.rs  capsule_capnp.rs  cli.rs  config.rs  consent_store.rs  diagnostics.rs  engine.rs  engine_manager.rs  env.rs  error_codes.rs  gen_ci.rs  hardware.rs  init.rs  install.rs  install_command_orchestration.rs  install_tests.rs  keygen.rs  main.rs  main_support.rs  main_tests.rs  manifest.rs  native_delivery.rs  native_delivery_tests.rs  new.rs  observability.rs  preview.rs  process_manager.rs  profile.rs  publish_artifact.rs  publish_ci.rs  publish_dry_run.rs  publish_official.rs  publish_private.rs  publish_tui.rs  r3_config.rs  registry.rs  registry_delete.rs  (+17 more)
src/assets/: static_file_server.ts
src/capsule_types/: capsule_v1.rs  mod.rs
src/commands/: build.rs  close.rs  guest.rs  inspect.rs  ipc.rs  logs.rs  mod.rs  open.rs  ps.rs  update.rs  validate.rs
src/common/: mod.rs  paths.rs  proxy.rs  (+1 more)
tests/: auto_bootstrap_e2e.rs  background_process_e2e.rs  cli_tests.rs  cli_validation_e2e.sh  e2e-test.sh  e2e_zero_config.sh  fail_closed_test.rs  guest_e2e.rs  inspect_requirements_e2e.rs  ipc_e2e.rs  local_registry_e2e.rs  native_delivery_e2e.rs  pack_sign_e2e.sh  sidecar_e2e.rs
(+81 files in other folders)
