[package]
name = "capsule-cli"
version = "0.1.0"
edition = "2021"
description = "capsule CLI (meta-runtime)"
license = "Apache-2.0"

[[bin]]
name = "capsule"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
which = "6.0"
ctrlc = "3.4"
dirs = "5.0"
hex = "0.4"
sha2 = "0.10"
rand = "0.8"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
