[workspace]
members = [
    ".",
    "core",
]
resolver = "2"

[package]
name = "ato-cli"
version = "0.3.6"
edition = "2021"
description = "ato CLI (meta-runtime)"
license = "Apache-2.0"

[[bin]]
name = "ato"
path = "src/main.rs"

[dependencies]
capsule-core = { path = "core" }
anyhow = "1.0"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
toml_edit = "0.22"
semver = "1.0"
which = "6.0"
ctrlc = "3.4"
dirs = "5.0"
miette = { version = "7", features = ["fancy"] }
hex = "0.4"
sha2 = "0.10"
rand = "0.8"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
base64 = "0.22"
regex = "1"
walkdir = "2"
tracing = "0.1"
axum = "0.7"
jsonschema = "0.17"
shell-words = "1.1"
async-trait = "0.1"
futures = "0.3"
notify = "7"
tar = "0.4"
flate2 = "1.0"
zip = "2.1"
zstd = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "time", "net", "signal"] }
tempfile = "3.8"
wasmtime = "16.0"
wasmtime-wasi = "16.0"
wasi-common = "16.0"
capnp = { version = "0.18", optional = true }
chrono = { version = "0.4", default-features = true }
thiserror = "2.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
urlencoding = "2.1"
hickory-resolver = "0.24"
libc = "0.2"
goblin = "0.8"
colored = "2.1"
ratatui = "0.29"
crossterm = "0.29"
tui-input = "0.12"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
wat = "1.0"

[features]
default = []
provisioning-tests = []
manifest-signing = ["capnp"]
